# gpt-manager

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODEX_START_HERE.md  DEVELOPMENT_PLAN.md  Dockerfile  MANIFEST.md  PRD.md  PROJECT_INSTRUCTIONS.md  PROJECT_STATUS.md  README.md  README_en.md  SYSTEM_DESIGN.md  TASK.md  compose.yaml  package-lock.json  playwright.config.ts  pyproject.toml
app/: __init__.py  config.py  defaults.py  extensions.py
app/admin/: __init__.py  routes.py
app/auth/: __init__.py  routes.py
app/logs/: __init__.py  routes.py
app/models/: __init__.py
app/prompts/: __init__.py  routes.py
app/reservations/: __init__.py  routes.py
app/routes/: main.py
app/services/: access_policy.py  encryption_service.py  legal_markdown_service.py  oauth_service.py  prompt_review_service.py  reservation_service.py
app/settings/: __init__.py  routes.py
app/static/: styles.css
app/templates/: base.html  dashboard.html  guide.html  index.html  profile.html
config/: config.py
docs/: EDUCATION.md
docs/adr/: 0001-use-flask-sqlite-docker-oci.md  0002-use-gemini-for-prompt-review.md  0003-release-freeze.md  0004-byok-llm-provider-settings.md
docs/architecture/: REPOSITORY_STRUCTURE.md
docs/decisions/: SECURITY_DECISIONS.md  (+1 more)
scripts/: backup_sqlite.sh  restore_sqlite.sh  seed_demo_data.py
tests/: conftest.py  test_admin.py  test_api_keys.py  test_app.py  test_auth.py  test_config.py  test_google_oauth.py  test_health.py  test_legal_pages.py  test_prompt_reviews.py  test_reservations.py  test_usage_logs.py  test_user_model.py
(+58 files in other folders)
